[tool.poetry]
name = "rionegromatchup"
version = "0.1.0"
description = "Python package and script to validate, model water quality parameters with remote sensing data"
authors = ["Felipe Sodré <felipe.b4rros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "^1.1.1"
pandas = "^2.3.3"
boto3 = "^1.40.42"
sentinelhub = "^3.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
